test/Fail/Issue2583.err
Issue2583.agda:7.1-10.26: error: [TerminationIssue]
Termination checking failed for the following function:
  test
Problematic calls:
  test x | nothing
  test x
    (at Issue2583.agda:10.20-24)
